--- a/nuget.config
+++ b/nuget.config
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
- <packageSources>
-    <!--To inherit the global NuGet package sources remove the <clear/> line below -->
-    <clear />
-    <add key="umbraco_headless_demo" value="https://api.umbraco_headless_demo.org/v3/index.json" />
- </packageSources>
+    <packageSources>
+        <add key="umbracoMyGet" 
+             value="https://www.myget.org/F/uaas/api/v3/index.json" 
+             protocolVersion="3" />
+    </packageSources>
 </configuration>
