--- a/TeePhrase/appsettings.json
+++ b/TeePhrase/appsettings.json
@@ -4,5 +4,11 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "umbracoHeadless": {
+    "url": "https://emmanuels-faithful-sloth.s1.umbraco.io",
+    "username": "headless.guest@emmti.com",
+    // add password in the user secrets file
+    "password": "YOUR-PASSWORD"
+  }  
 }
