Added two Umbraco Headless packages as local packages since they are no longer available in Umbraco MyGet feed

--- a/nuget.config
+++ b/nuget.config
@@ -4,5 +4,13 @@
         <add key="umbracoMyGet" 
              value="https://www.myget.org/F/uaas/api/v3/index.json" 
              protocolVersion="3" />
+        <!-- Added packages from a local folder since they are not present on umbracoMyGet any longer -->
+        <!-- TODO: Upgrade to latest package from umbracoMyGet and update code -->
+        <add key="LocalPackages"
+             value="LocalPackages" />
     </packageSources>
+    <activePackageSource>
+      <!-- this tells that all of them are active -->
+      <add key="All" value="(Aggregate source)" />
+    </activePackageSource>
 </configuration>
